# StageView

./: .gitattributes  .gitignore  PIP_EDITOR_TEST_PLAN.md  README.md  err.txt  package.json  pip-test-guide.md  setup-signing.ps1
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
docs/: TESTING.md  UPDATING.md
docs/plans/: 2026-02-13-bugfix-per-camera-features-design.md  2026-02-13-bugfix-per-camera-features-implementation.md  2026-02-13-production-hardening-design.md  2026-02-13-production-hardening-implementation.md  2026-02-13-stageview-enhancements.md  2026-02-13-ux-polish-design.md  2026-02-13-ux-polish-implementation.md  2026-02-15-perf-ux-improvements-design.md  2026-02-15-perf-ux-improvements.md
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: control_panel.html  lib.rs  main.rs
