[package]
name = "stageview"
version = "1.1.1"
edition = "2021"
description = "Lightweight multi-camera grid viewer with burn-in protection"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "process"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tauri-plugin-updater = "2"
mdns-sd = "0.11"
